--- a/html/assets/css/default.css
+++ b/html/assets/css/default.css
@@ -83,7 +83,7 @@ html {
 .navButtons {
    /* float: left; */
    /* margin-top: 1.5em; */
-   border-left: 5px solid #3FA442;
+   border-left: 5px solid #C52227;
    padding-left: 20px;
    padding-right: 20px;
    margin: 0 auto;
@@ -101,8 +101,8 @@ html {
 #endButton {
   /* float: left; */
   /* margin-top: 1.5em; */
-  border-left: 5px solid #3FA442;
-  border-right: 5px solid #3FA442;
+  border-left: 5px solid #C52227;
+  border-right: 5px solid #C52227;
   padding-left: 20px;
   padding-right: 20px;
   margin: 0 auto;
@@ -180,7 +180,7 @@ p {
 #discordURL {
     display: block;
     font-size: 2em;
-    color:#3FA442;
+    color:#C52227;
     word-wrap: break-word;
     /* border:greenyellow dotted 5px; */
 }
@@ -221,8 +221,8 @@ p {
    color: #EAAB00;
 }
 
-.TerpCraft {
-   color:#3FA442;
+.UMCPGMC {
+   color:#C52227;
 }
 
 .boldText {
@@ -232,7 +232,7 @@ p {
 
 summary {
    color: white;
-   background-color: #3FA442;
+   background-color: #C52227;
    padding: 25px;
    border-radius: 25px;
    margin: auto 0;
@@ -267,7 +267,7 @@ details[open] > div {
 }
 
 .sectionHeading * {
-   color:#3FA442;
+   color:#C52227;
    text-align: center;
    margin-top: 40px;
 }
