Updated rules and CSS

--- a/html/assets/css/default.css
+++ b/html/assets/css/default.css
@@ -214,7 +214,7 @@ p {
 }
 
 .Virginia {
-   color: #00297B;
+   color: #0055ff;
 }
 
 .Maryland {
@@ -267,7 +267,7 @@ details[open] > div {
 }
 
 .sectionHeading * {
-   color:#C52227;
+   color:#EAAB00;
    text-align: center;
    margin-top: 40px;
 }
